--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <body>
 
 <h1>This is heading 1</h1>
+<hr>
 <h2>This is heading 2</h2>
 <h3>This is heading 3</h3>
+<hr>
+
+<p>My life began in Sweden...;alksdjfMy life began in Sweden...;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...;alksdj </p>
+
 </body>
 </html>
