--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <h3>This is heading 3</h3>
 <hr>
 
-<p>My life began in Sweden...;alksdjfMy life began in Sweden...
-;alksdjMy life began in Sweden...
-;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...
-;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...
+<p>My life began in Sweden...;alksdjfMy life began in Sweden...<br>
+;alksdjMy life began in Sweden...<br>
+;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...<br>
+;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...<br>
 ;alksdjMy life began in Sweden...;alksdj </p>
 
 </body>
