--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <h3>This is heading 3</h3>
 <hr>
 
-<p>My life began in Sweden...;alksdjfMy life began in Sweden...<br>
-;alksdjMy life began in Sweden...<br>
-;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...<br>
-;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...<br>
-;alksdjMy life began in Sweden...;alksdj </p>
+<pre>My life began in Sweden...;alksdjfMy life began in Sweden..
+;alksdjMy life began in Sweden...
+;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...
+;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...
+;alksdjMy life began in Sweden...;alksdj </pre>
 
 </body>
 </html>
