--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style=:background-color:red">
+<body style=:background-color:red;">
 
 <h1>This is heading 1</h1>
 <hr>
@@ -8,7 +8,7 @@
 <h3>This is heading 3</h3>
 <hr>
 
-<pre style="color:blue">My life began in Sweden...;alksdjfMy life began in Sweden..
+<pre style="color:blue;" style="text-align:center;">My life began in Sweden...;alksdjfMy life began in Sweden..
 
 ;alksdjMy life began in Sweden...
 
