--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <h3>This is heading 3</h3>
 <hr>
 
-<pre style="color:blue;" style="text-align:center;">My life began in Sweden...;alksdjfMy life began in Sweden..
+<p style="color:blue;" style="text-align:center;">My life began in Sweden...;alksdjfMy life began in Sweden..
 
-;alksdjMy life began in Sweden...
+;alksdjMy life began in Sweden...<br>
 
-;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...
+;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...<br>
 
-;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...
+;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...<br>
 
-;alksdjMy life began in Sweden...;alksdj </pre>
+;alksdjMy life began in Sweden...;alksdj </p>
 
 </body>
 </html>
