--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h3>This is heading 3</h3>
 <hr>
 
-<p style="color:blue;" style="text-align:center;">My life began in Sweden...;alksdjfMy life began in Sweden..
+<p style="color:blue;text-align:center;">My life began in Sweden...;alksdjfMy life began in Sweden..
 
 ;alksdjMy life began in Sweden...<br>
 
