--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <h3>This is heading 3</h3>
 <hr>
 
-<p style="color:blue;text-align:center;">My life began in Sweden...;alksdjfMy life began in Sweden..
+<pre style="color:blue;text-align:center;">My life began in Sweden...;alksdjfMy life began in Sweden..
 
-;alksdjMy life began in Sweden...<br>
+;alksdjMy life began in Sweden...
 
-;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...<br>
+;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...
 
-;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...<br>
+;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...
 
-;alksdjMy life began in Sweden...;alksdj </p>
+;alksdjMy life began in Sweden...;alksdj </pre>
 
 </body>
 </html>
