--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style=:background-color:red;">
+<body style=background-color:red;">
 
 <h1>This is heading 1</h1>
 <hr>
