--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body style=background-color:tomato;">
+<body style=background-color:rgb(40,40,80);">
 
-<h1>This is heading 1</h1>
-<hr>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
+<h1 style="text-align:center">Welcome!</h1>
 <hr>
 
-<pre style="color:blue;text-align:center;">My life began in Sweden...;alksdjfMy life began in Sweden..
+<pre style="color:blue;text-align:center;">
+This page is under construction. 
 
-;alksdjMy life began in Sweden...
-
-;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...
-
-;alksdjMy life began in Sweden...;alksdjMy life began in Sweden...
-
-;alksdjMy life began in Sweden...;alksdj </pre>
+Please check back in soon!
+</pre>
 
 </body>
 </html>
