--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@ This page is under construction.
 Please check back in soon!
 </pre>
 
+<canvas id="canvas" width="300" height="300">
+  An alternative text describing what your canvas displays. 
+</canvas>
+
+
 </body>
 </html>
