--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-  </body>
-</html>
+---
+layout: default
+title: home
+---
+
+<h1>Home Page</h1>
