--- a/fpga.html
+++ b/fpga.html
@@ -1,5 +1,5 @@
 <div style="position:relative; top:100px;">
-<a href="#" onclick="changeTreeNode('/fpga.html', this)">
+<a href="#" onclick="changeTreeNode('/fpga.html', this); return false;">
 <figure class="topic_fig">
 <img class="topic_img" src="/assets/images/fpga.png">
 <figcaption>Data Aqcuisition with Xilinx Kintex</figcaption>
