each tree div takes up entire window space now

--- a/fpga.html
+++ b/fpga.html
@@ -1,8 +1,8 @@
-<div style="position:relative; top:100px;">
+<!-- <div style="position:relative; top:100px;"> -->
 <a href="#" onclick="changeTreeNode('/fpga.html', this); return false;">
 <figure class="topic_fig">
 <img class="topic_img" src="/assets/images/fpga.png">
 <figcaption>Data Aqcuisition with Xilinx Kintex</figcaption>
 </figure>
 </a>
-</div>
+<!-- </div> -->
