an article emerges

--- a/Topics/FPGA/DAQ_PROJECT/daqproject.html
+++ b/Topics/FPGA/DAQ_PROJECT/daqproject.html
@@ -1,8 +1,8 @@
 <p class="metainfo" name="background" value="/assets/images/circuit.jpg"></p>
 
-<a href="#" onclick="changeTreeNode('/Topics/fpga.html', this); return false;">
+<a href="/Topics/FPGA/DAQ_PROJECT/intro.html">
 <figure class="topic_fig">
 <img class="topic_img" src="/assets/images/fpga.png">
-<figcaption>Data Aqcuisition with Xilinx Kintex</figcaption>
+<figcaption>Introduction</figcaption>
 </figure>
 </a>
